--- a/openApiDocs/beta/BackupRestore.yml
+++ b/openApiDocs/beta/BackupRestore.yml
@@ -4730,7 +4730,7 @@ paths:
       tags:
         - solutions.backupRestoreRoot
       summary: Invoke action cancelOffboard
-      description: Cancel offboard for a protectionUnitBase.
+      description: Cancel the offboarding of a protectionUnitBase.
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/protectionunitbase-canceloffboard?view=graph-rest-beta
@@ -8187,7 +8187,7 @@ components:
               maximum: 2147483647
               minimum: -2147483648
               type: number
-              description: .
+              description: This property will be deprecated soon. Don't use.
               format: int32
               nullable: true
             searchResponseId:
@@ -8396,21 +8396,26 @@ components:
             createdDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
-              description: The time of creation of the policy.
+              description: 'The date and time when the policy was created. The timestamp type represents date and time information using ISO 8601 format and is always in UTC. For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z.'
               format: date-time
               nullable: true
             displayName:
               type: string
               description: The name of the policy to be created.
               nullable: true
+            isEnabled:
+              type: boolean
+              description: Indicates whether the policy is enabled.
             lastModifiedBy:
               $ref: '#/components/schemas/microsoft.graph.identitySet'
             lastModifiedDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
-              description: The timestamp of the last modification of the policy.
+              description: 'The date and time when the policy was last modified. The timestamp type represents date and time information using ISO 8601 format and is always in UTC. For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z.'
               format: date-time
               nullable: true
+            protectionPolicyArtifactCount:
+              $ref: '#/components/schemas/microsoft.graph.protectionPolicyArtifactCount'
             retentionSettings:
               type: array
               items:
@@ -8953,6 +8958,40 @@ components:
         - restoreLocked
         - unknownFutureValue
       type: string
+    microsoft.graph.protectionPolicyArtifactCount:
+      title: protectionPolicyArtifactCount
+      type: object
+      properties:
+        completed:
+          maximum: 2147483647
+          minimum: -2147483648
+          type: number
+          description: The number of artifacts whose protection is completed.
+          format: int32
+          nullable: true
+        failed:
+          maximum: 2147483647
+          minimum: -2147483648
+          type: number
+          description: The number of artifacts whose protection failed.
+          format: int32
+          nullable: true
+        inProgress:
+          maximum: 2147483647
+          minimum: -2147483648
+          type: number
+          description: The number of artifacts whose protection is in progress.
+          format: int32
+          nullable: true
+        total:
+          maximum: 2147483647
+          minimum: -2147483648
+          type: number
+          description: The number of artifacts present in the protection policy.
+          format: int32
+          nullable: true
+      additionalProperties:
+        type: object
     microsoft.graph.retentionSetting:
       title: retentionSetting
       type: object
